Attempt to prevent zoom in on iOS in text input

--- a/src/components/Lomake.css
+++ b/src/components/Lomake.css
@@ -24,9 +24,16 @@ form legend {
   font-weight: 800;
 }
 
-input[type='text'] {
+.username-input {
   border: 1px solid var(--color-border-light);
   font-weight: 500;
+  font-size: 1.6rem;
+}
+
+@media (min-width: 768px) {
+  .username-input {
+    font-size: 1.4rem;
+  }
 }
 
 .required::after {
